# Smart-Media-Manager

./: .gitignore  CHANGELOG.md  COMPATIBILITY_SHEET.md  CONTRIBUTING.md  COOLDOWN_FIX.md  FORMAT_REGISTRY.md  GITHUB_ISSUES_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  MISSING_FORMATS.md  README.md  TEST_COVERAGE_SUMMARY.md  TODO.md  ULTIMATE_FORMAT_TEST_SUMMARY.md  V0.5.0_IMPLEMENTATION_PLAN.md  compatibility.json  format_test_commands.json  format_test_results.py  import2photos.sh  main.py  pyproject.toml  reinstall.sh  release.py  test_audio_safety.py  test_extension_normalization.py  test_filename_sanitization.py  test_gather_media_behavior.py  test_log_directory.py  test_nonmedia_safety.py  test_path_validation.py  test_staging_behavior.py  test_unit_log_system.py  test_unit_path_logic.py  test_uuid_integration.py  uuid_expansion_plan.md
.github/: CI_SETUP.md
docs/: CI_AND_TESTING.md  metadata_rosetta_stone.md
docs_dev/: CLAUDE_CODE_CI_GUIDE.md  DEPLOYMENT_SUMMARY.md
format_analysis/: ffprobe_codecs.txt  ffprobe_demuxers.txt  ffprobe_dispositions.txt  ffprobe_formats.txt  ffprobe_layouts.txt  ffprobe_muxers.txt  ffprobe_pix_fmts.txt  ffprobe_sample_fmts.txt
format_tests_results/: compatibility_summary.txt  test_results.json
githooks/: post-checkout  post-merge  post-rewrite  pre-commit  pre-rebase
samples/: README.md  test_set.yaml
scripts/: README_TESTING.md  create_compatibility_sheet.py  generate_all_format_commands.py  protect_docs_dev.sh  secrets_scan.py  test_all_samples.py  ultimate_format_test.py  validate_samples.sh
scripts_dev/: README.md  README_TESTING.md  analyze_missing_formats.py  analyze_test_results.py  audit_cross_tool_mappings.py  audit_metadata_duplicates.py  comprehensive_format_test.py  debug_mov.py  extra_formats.txt  fix_tests.py  generate_additional_samples.sh  generate_comprehensive_samples.sh  generate_format_registry.py  identify_missing_exif_tags.py  test_analysis.md  test_detect_extensions.py  test_format_compatibility.py  test_gather_media_behavior.py  test_live_photos_panoramas.py  test_log_directory.py  test_path_validation.py  test_uuid_integration.py
smart_media_manager/: cli.py  format_compatibility.json  format_registry.json  format_registry.py  format_rules.py  metadata_registry.json  metadata_registry.py  uuid_generator.py
tests/: UNIT_COVERAGE.md  __init__.py  conftest.py  helpers.py  test_animation_detection.py  test_corrupt_file_detection.py  test_dependency_functions.py  test_detect_media_integration.py  test_e2e_photos_import.py  test_e2e_pipeline.py  test_file_operations.py  test_rules.py  (+20 more)
(+9 files in other folders)
