[project]
name = "smart-media-manager"
version = "0.5.1a1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "filetype>=1.2.0",
    "puremagic>=1.30",
    "isbinary>=1.0.1",
    "python-magic>=0.4.27",
    "pyfsig>=1.1.1",
    "pillow>=12.0.0",
]

[project.optional-dependencies]
# Optional dependencies for enhanced media detection
# Note: binwalk is installed via Homebrew, not pip
enhanced = [
    "rawpy>=0.17.0",   # RAW image format support
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "pytest-mypy-plugins>=3.2.0",
]

[project.scripts]
smart-media-manager = "smart_media_manager.cli:run"

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["smart_media_manager"]

[tool.setuptools.package-data]
smart_media_manager = ["*.json"]

[tool.uv]
default-groups = ["dev"]

[tool.pytest.ini_options]
markers = [
    "minimal: Minimal CI tests that run with small samples (under 300KB)",
    "e2e: End-to-end tests that require large sample files",
    "slow: Tests that take significant time to run",
]
# Default: run all tests except e2e (which need large samples)
addopts = "-v --tb=short -m 'not e2e'"
